test/fail/basic_syntax/invalid_eq.lly
#[
SyntaxError: Invalid operation: list[integer] == list[string].
    from invalid_eq.lly:6
]#

[1] == ["1"]
